# clabe-python

./: .codecov.yml  .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_clabe.py
.github/: dependabot.yml
.github/workflows/: licenses.yml  release.yml  test.yml
clabe/: __init__.py  banks.py  errors.py  helpers.py  types.py  utils.py  validations.py  version.py
clabe/types/: __init__.py  clabes.py  clabes_pydantic_legacy.py
clabe/types/clabes_legacy/: clabes.py  errors.py
scripts/: compare_banks.py
tests/: test_clabe.py  test_types.py
